--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -151,6 +151,18 @@
         <div class="photo-container">
             <img src="COPY JER 5.jpg" alt="Candid shot of us laughing">
             <div class="caption">A candid moment of joy</div>
+             </div>
+        <div class="photo-container">
+            <img src="COPY JER 6.jpg" alt="Candid shot of us laughing">
+            <div class="caption">A candid moment of joy</div>
+             </div>
+        <div class="photo-container">
+            <img src="COPY JER 7.jpg" alt="Candid shot of us laughing">
+            <div class="caption">A candid moment of joy</div>
+             </div>
+        <div class="photo-container">
+            <img src="COPY JER .8jpg" alt="Candid shot of us laughing">
+            <div class="caption">A candid moment of joy</div>
         </div>
     </div>
 </section>
