--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -161,7 +161,7 @@
             <div class="caption">A candid moment of joy</div>
              </div>
         <div class="photo-container">
-            <img src="COPY JER .8.jpg" alt="Candid shot of us laughing">
+            <img src="COPY JER 8.jpg" alt="Candid shot of us laughing">
             <div class="caption">A candid moment of joy</div>
         </div>
     </div>
