--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -154,7 +154,7 @@
              </div>
         <div class="photo-container">
             <img src="COPY JER 6.jpg" alt="Candid shot of us laughing">
-            <div class="caption">A candid moment of joy</div>
+            <div class="caption">MIMIKK TUTU</div>
              </div>
         <div class="photo-container">
             <img src="COPY JER 7.jpg" alt="Candid shot of us laughing">
