--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -158,7 +158,7 @@
              </div>
         <div class="photo-container">
             <img src="COPY JER 7.jpg" alt="Candid shot of us laughing">
-            <div class="caption">A candid moment of joy</div>
+            <div class="caption">MIMIKK TUTUUUUU</div>
         </div>
     </div>
 </section>
