--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -158,7 +158,12 @@
              </div>
         <div class="photo-container">
             <img src="COPY JER 7.jpg" alt="Candid shot of us laughing">
-            <div class="caption">MIMIKK TUTUUUUU</div>
+            <div class="caption">MIMIKK TUTUUUUU🍼🍼</div> 
+            <div class="photo-container">
+              </div>
+        <div class="photo-container">
+            <img src="COPY JER 8.jpg" alt="Candid shot of us laughing">
+            <div class="caption">ALAY BEDUA NJIR😹😹😹</div>
         </div>
     </div>
 </section>
