--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -130,7 +130,7 @@
 <!-- Button to show/hide photos -->
 <section>
     <h2>Our Favorite Moments</h2>
-    <button onclick="togglePhotos()">Show/Hide Photos</button>
+    <button onclick="togglePhotos()">PINCIT MELIHAT KEMECELAAN KAMII</button>
     <div id="photo-section" class="photos">
         <div class="photo-container">
             <img src="COPY JER.jpg" alt="Photo of us together">
@@ -171,7 +171,7 @@
 <!-- Button to show/hide videos -->
 <section>
     <h2>Video Memories</h2>
-    <button onclick="toggleVideos()">Show/Hide Videos</button>
+    <button onclick="toggleVideos()">PINCIT MELIHAT PIDIO NA</button>
     <div id="video-section" class="videos">
         <video controls>
             <source src="video1.mp4" type="video/mp4">
