--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -171,7 +171,7 @@
 <!-- Button to show/hide videos -->
 <section>
     <h2>Video Memories</h2>
-    <button onclick="toggleVideos()">PINCIT MELIHAT PIDIO NA</button>
+    <button onclick="toggleVideos()">PINCIT LIAT PIDIO NA</button>
     <div id="video-section" class="videos">
         <video controls>
             <source src="video1.mp4" type="video/mp4">
