--- a/BUBIEEEE.html
+++ b/BUBIEEEE.html
@@ -164,6 +164,10 @@
         <div class="photo-container">
             <img src="COPY JER 8.jpg" alt="Candid shot of us laughing">
             <div class="caption">ALAY BEDUA NJIR😹😹😹</div>
+              </div>
+        <div class="photo-container">
+            <img src="COPY JER 3.jpg" alt="Fun trip memory">
+            <div class="caption">Memories from our fun trip</div>
         </div>
     </div>
 </section>
